syntax = "proto3";
package note;
import "note/note.model.proto";

import "protoc-gen-openapiv2/options/annotations.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "utils/empty/empty.imp.proto";
import "utils/response/response.imp.proto";
import "utils/proto/go/policy.imp.proto";


option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0"
  }
};

service NoteService {

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
		description: "笔记相关接口"
    };
    //验证码
    rpc Create (note.Note) returns (response.CommonRep) {
        option (google.api.http) = {
            post: "/api/v1/note"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            tags:["笔记相关接口","v1.0.0"]
            summary : "创建笔记"
            description : "创建笔记接口"
        };
    }

}

message CreateNoteReq {
    string title = 2 [(go.field) = "gorm:\"type:varchar(10)\" validate:\"gte=3,lte=10\" comment:\"标题\""];
    string content = 3 [(go.field)="gorm:\"type:text"];
    string public_name = 4 [(cuzproto.non_sensitive) = true];

}
